--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,13 +2,11 @@ FROM node:20-alpine AS base
 
 WORKDIR /app
 
+# Copy package files and prisma schema
 COPY package*.json ./
 COPY prisma ./prisma/
 
-FROM base AS dependencies
-
-RUN npm ci --only=production
-
+# Build stage - install all dependencies and build
 FROM base AS build
 
 RUN npm ci
@@ -16,19 +14,30 @@ COPY . .
 RUN npx prisma generate
 RUN npm run build
 
+# Production image
 FROM node:20-alpine AS production
 
 WORKDIR /app
 
 ENV NODE_ENV=production
 
-COPY --from=dependencies /app/node_modules ./node_modules
+# Copy package files and install production dependencies only
+COPY package*.json ./
+RUN npm ci --omit=dev
+
+# Copy built files and prisma
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/prisma ./prisma
-COPY package*.json ./
+COPY --from=build /app/node_modules/.prisma ./node_modules/.prisma
 
+# Generate Prisma client for production platform
 RUN npx prisma generate
 
+# Render sets PORT dynamically
 EXPOSE 5000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-5000}/api/health || exit 1
 
 CMD ["npm", "start"]
