--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "start": "npx prisma migrate deploy && node dist/server.js",
+    "build": "tsc && tsc prisma/seed.ts --outDir dist/prisma --esModuleInterop --skipLibCheck",
+    "start": "npx prisma migrate deploy && node dist/prisma/seed.js && node dist/server.js",
     "start:simple": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
