--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "expo-font": "~14.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.0",
+    "expo-location": "~19.0.8",
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "^14.0.8",
